News Archive sorter
Added in some extra pages for jekyll testing. (news, news archives)
Added in news sorter to news_archives.html
Added in sorting code to main.js
Added in sass file for styling sorter.

Documented how sorter works in the main.js file.

Next, will try to implement in Events also so that entire “mixItUp”
scripts can be removed and sorting can be handled solely by our own
managed scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # Jekyll files #
 ###################
 _site/
+_vendor/
 .sass-cache/
 .jekyll-metadata
+Gemfile
+Gemfile.lock
+.bundle/config
+.gitignore
 
 # Compiled source #
 ###################
@@ -41,3 +46,4 @@ _site/
 .Trashes
 ehthumbs.db
 Thumbs.db
+_vendor/bundle/ruby/2.3.0/bin/bourbon
